--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "libphonenumber-js": "^1.10.56",
     "@stripe/stripe-js": "^7.9.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.57.4",
+    "libphonenumber-js": "^1.10.56",
     "lucide-react": "^0.544.0",
     "nanoid": "^5.1.5",
     "next": "15.5.3",
@@ -22,6 +22,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
     "react-hot-toast": "^2.6.0",
+    "react-phone-number-input": "^3.4.12",
     "stripe": "^18.5.0",
     "twilio": "^5.10.0",
     "zod": "^4.1.11",
