--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
     "react-phone-number-input": "^3.4.12",
+    "resend": "^6.5.2",
     "sonner": "^2.0.7",
     "stripe": "^18.5.0",
     "tailwind-merge": "^3.3.1",
