--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "nanoid": "^5.1.5",
     "next": "15.5.9",
     "next-themes": "^0.4.6",
+    "posthog-js": "^1.335.2",
+    "posthog-node": "^5.24.2",
     "react": "19.1.0",
     "react-day-picker": "^9.13.0",
     "react-dom": "19.1.0",
