--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "dev": "TINA_PUBLIC_IS_LOCAL=true tinacms dev -c \"next dev --turbopack\"",
+    "build": "tinacms build && next build --turbopack",
     "start": "next start",
     "lint": "eslint",
     "clean": "rm -rf .next"
@@ -67,6 +67,7 @@
     "sonner": "^2.0.7",
     "stripe": "^18.5.0",
     "tailwind-merge": "^3.3.1",
+    "tinacms": "^3.3.1",
     "tw-animate-css": "1.4.0",
     "vaul": "^1.1.2",
     "zod": "^4.1.11",
@@ -75,8 +76,9 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@tinacms/cli": "^2.1.1",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^20.19.17",
+    "@types/node": "^20.19.23",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "eslint": "^9",
