--- a/content/pages/restaurant-waitlist-app.json
+++ b/content/pages/restaurant-waitlist-app.json
@@ -35,46 +35,80 @@
   },
   "benefits": {
     "title": "Less time handling the line, more time focusing on great service",
-    "sections": [
+    "steps": [
       {
-        "title": "Customers check-in",
-        "description": "Guests join the waitlist themselves via QR code or tablet. No queue at the host stand.",
-        "image": "/images/bar friends.jpg"
-      },
-      {
-        "title": "You serve more, faster",
-        "description": "See who's next, send notifications, and seat guests with one tap. No paperwork, no confusion.",
+        "stepNumber": 1,
+        "title": "Customers check in",
+        "bullets": [
+          { "text": "Add walk-ins in seconds or let customers self check-in from any device" },
+          { "text": "Customers get an wait time estimate at a virtual waiting room, staying in the loop even if they step away" }
+        ],
+        "link": "/features/self-check-in",
+        "linkText": "More about self-check-in",
         "image": "/images/couple.jpg"
       },
       {
-        "title": "You eliminate wait time questions",
-        "description": "Customers see their position and estimated wait time on their phone. No more \"how much longer?\" interruptions.",
+        "stepNumber": 2,
+        "title": "Your team moves faster",
+        "bullets": [
+          { "text": "Easily run a waitlist that show who's waiting and who's next in real-time" },
+          { "text": "Keep control of the flow - tap once to call them in, tap again to mark them seated" },
+          { "text": "Set up separate waitlists for indoor/outdoor or across restaurant locations" }
+        ],
+        "link": "/features/virtual-waitlist",
+        "linkText": "Explore digital waitlist",
         "image": "/images/friends.jpg"
+      },
+      {
+        "stepNumber": 3,
+        "title": "Your data turns into smarter operations",
+        "bullets": [
+          { "text": "Track which times have the longest waits. Adjust pacing and staffing to act on them." },
+          { "text": "Watch your no-show rate drop and your table turnover increase." }
+        ],
+        "link": "/features/analytics",
+        "linkText": "Analytics",
+        "image": "/images/bar friends.jpg"
       }
     ]
   },
   "beforeAfter": {
-    "title": "Improve revenues, reviews, and repeat visits",
-    "tabs": [
+    "title": "Improve revenue, reviews, and repeat visits",
+    "subtitle": "Badly managed queues damage your restaurant in different ways.",
+    "beforeTitle": "Before WaitQ",
+    "afterTitle": "With WaitQ",
+    "beforeItems": [
       {
-        "id": "before",
-        "label": "Before WaitQ",
-        "items": [
-          { "text": "Paper lists get lost or illegible", "positive": false },
-          { "text": "Guests crowd the entrance", "positive": false },
-          { "text": "Staff constantly interrupted", "positive": false },
-          { "text": "Walk-aways when wait seems too long", "positive": false }
-        ]
+        "title": "Front-door chaos",
+        "description": "Crowds at the entrance slow seating, stress staff, and scare customers into leaving. You're juggling names and timing with no visibility.",
+        "icon": "Users"
       },
       {
-        "id": "after",
-        "label": "After WaitQ",
-        "items": [
-          { "text": "Digital queue always up-to-date", "positive": true },
-          { "text": "Guests wait comfortably anywhere", "positive": true },
-          { "text": "Staff focused on hospitality", "positive": true },
-          { "text": "Accurate wait times reduce walk-aways", "positive": true }
-        ]
+        "title": "Time-consuming paper waitlists",
+        "description": "Manual lists create mistakes, constant \"how long?\" interruptions and uncertainty about who's next, leading to lost tables.",
+        "icon": "Clock"
+      },
+      {
+        "title": "Poor, unpredictable guest experience",
+        "description": "Unclear wait expectations frustrate guests, trigger no-shows, and damage reviews.",
+        "icon": "AlertCircle"
+      }
+    ],
+    "afterItems": [
+      {
+        "title": "Organized queue, organized mind",
+        "description": "Customers check in digitally. Your team knows exactly who's next. No yelling names, no confusion, no lost tables.",
+        "icon": "Check"
+      },
+      {
+        "title": "Actual data on your wait times",
+        "description": "Real-time wait visibility means fewer customer complaints and more accurate seating predictions. You know what's actually happening.",
+        "icon": "BarChart3"
+      },
+      {
+        "title": "Happier customers = better reviews",
+        "description": "Customers know the wait upfront. They stick around, spend money while waiting, and leave happier. That shows in your ratings.",
+        "icon": "Heart"
       }
     ]
   },
@@ -84,22 +118,27 @@
       {
         "title": "Reduced front-door chaos",
         "description": "Customer flow becomes predictable; your team stays calm even during rush hours.",
-        "icon": "Users"
+        "image": "/images/bar friends.jpg"
       },
       {
         "title": "Public Display",
         "description": "Show the queue on a TV at your entrance. Guests see their position without bothering staff.",
-        "icon": "Monitor"
+        "image": "/images/friends.jpg"
       },
       {
         "title": "Set up in minutes",
         "description": "WaitQ works on your existing devices. No hardware, no installation, no training.",
-        "icon": "Zap"
+        "image": "/images/couple.jpg"
       },
       {
         "title": "VIP priority",
         "description": "Flag regulars or VIPs for priority seating—without announcing it to the room.",
-        "icon": "Heart"
+        "image": "/images/couple.jpg"
+      },
+      {
+        "title": "Free for small business",
+        "description": "Full access to core features without paying a dime. Upgrade only when you need more.",
+        "image": "/images/bar friends.jpg"
       }
     ]
   },
