Refactor marketing page components to utilize a unified rendering approach. Update section templates for consistency, including renaming templates for clarity. Adjust build scripts for local development to enhance performance and streamline the development process.

--- a/content/landing-pages/restaurant-waitlist-app.json
+++ b/content/landing-pages/restaurant-waitlist-app.json
@@ -187,7 +187,7 @@
       ]
     },
     {
-      "_template": "globalCta",
+      "_template": "ctaSection",
       "title": "The smart way to manage walk-in customers",
       "subtitle": "Reduce wait times, improve customer satisfaction, and increase revenue by servicing more, happier clients.",
       "primaryButtonText": "Try WaitQ",
