--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "TINA_PUBLIC_IS_LOCAL=true tinacms dev -c \"next dev --turbopack\"",
-    "build": "tinacms build && next build --turbopack",
+    "build": "tinacms build --noTelemetry --datalayer-port 9100 && next build --turbopack",
     "build:local": "TINA_PUBLIC_IS_LOCAL=true tinacms dev --noWatch --noTelemetry --datalayer-port 9100 -c \"NODE_ENV=production next build --turbopack\"",
     "start": "next start",
     "lint": "eslint",
@@ -13,6 +13,7 @@
   "dependencies": {
     "@base-ui-components/react": "1.0.0-beta.4",
     "@hookform/resolvers": "^5.2.2",
+    "@polar-sh/nextjs": "^0.9.3",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.0",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -72,7 +73,7 @@
     "tinacms": "^3.3.1",
     "tw-animate-css": "1.4.0",
     "vaul": "^1.1.2",
-    "zod": "^4.1.11",
+    "zod": "^4.1.12",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
